misc: add ignored strings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
   "cSpell.ignoreWords": [
+    "Henriëtte",
     "bosmans",
     "Elizaveta",
-    "Dimitri"
+    "Agrafenina",
+    "Dimitry",
+    "Dimitri",
+    "Malignan",
+    "Szmydt",
+    "Satomi",
+    "Chihara"
   ]
 }
