--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"framer-motion": "^2.9.1",
+		"hamburger-react": "^2.4.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-player": "^2.6.2",
