--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,20 @@
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
+node_modules
+package-lock.json
+yarn.lock
 
 # production
 /build
 
+# docker
+Dockerfile
+docker-compose.yaml
+.dockerignore
+nginx
+
+# AWS
+bosmans.pem
+
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-ngrok
 /pics
-package-lock.json
+**.DS_Store
